--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-streamlit
-pandas
-numpy
-matplotlib
-seaborn
-plotly
+streamlit==1.24.0
+pandas==2.0.3
+numpy==1.25.2
+osmnx==1.2.2
+networkx==3.1
+folium==0.14.0
+streamlit-folium==0.8.0
